# nonebot-plugin-word-bank2

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_word_bank2/: __init__.py  data_source.py  moinkeypath.py  util.py  word_entry.py
