[project]
name = "nonebot-plugin-word-bank2"
authors = [{ name = "kexue", email = "x@kexue-cloud.cn" }]
description = "无数据问答插件"
license = "GPL-3.0"
readme = "README.md"
version = "0.2.0"
requires-python = "<4.0,>=3.10"
dependencies = [
    "httpx>=0.28.1",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.54.1",
    "nonebot-plugin-localstore>=0.7.3",
    "nonebot2>=2.4.0",
]

[project.urls]
homepage = "https://github.com/kexue-z/nonebot-plugin-word-bank2"

[tool.pdm]
distribution = true

[tool.isort]
profile = "black"


[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?:\D*)?(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'
fallback_version = "0.1.0"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
